Added direct links to PDFs

--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
         <h1>Hts-specs</h1>
         <p>Specifications of SAM/BAM and related high-throughput sequencing file formats</p>
 
+        <p style="margin:0px;">View as PDF: </p>
+            <ul>
+            <li> <a href="http://samtools.github.io/hts-specs/SAMv1.pdf">SAMv1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/BCFv1_qref.pdf">BCFv1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/BCFv2_qref.pdf">BCFv2.1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/CSIv1.pdf">CSIv1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/tabix.pdf">tabix</a>
+            <li> <a href="http://samtools.github.io/hts-specs/VCFv4.1.pdf">VCFv4.1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/VCFv4.2.pdf">VCFv4.2</a>
+            </ul>
+
         <p class="view"><a href="https://github.com/samtools/hts-specs">View the Project on GitHub <small>samtools/hts-specs</small></a></p>
 
 
-        <ul>
+        <ul class="header">
           <li><a href="https://github.com/samtools/hts-specs/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/samtools/hts-specs/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/samtools/hts-specs">View On <strong>GitHub</strong></a></li>
