--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p style="margin:0px;">View as PDF: </p>
             <ul>
             <li> <a href="http://samtools.github.io/hts-specs/SAMv1.pdf">SAMv1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/CRAMv2.1.pdf">CRAMv2.1</a>
             <li> <a href="http://samtools.github.io/hts-specs/BCFv1_qref.pdf">BCFv1</a>
             <li> <a href="http://samtools.github.io/hts-specs/BCFv2_qref.pdf">BCFv2.1</a>
             <li> <a href="http://samtools.github.io/hts-specs/CSIv1.pdf">CSIv1</a>
@@ -47,7 +48,8 @@
 
 <p><strong>SAMv1.tex</strong> is the canonical specification for the SAM (Sequence Alignment/Map) format, BAM (its binary equivalent), and the BAI format for indexing BAM files.</p>
 
-<p>The CRAM format is described at <a href="http://www.ebi.ac.uk/ena/about/cram_toolkit">ENA's CRAM toolkit page</a>.</p>
+<p><strong>CRAMv2.1.tex</strong> is the canonical specification for the CRAM format.
+Further details can be found at <a href="http://www.ebi.ac.uk/ena/about/cram_toolkit">ENA's CRAM toolkit page</a>.</p>
 
 <p>The <strong>tabix.tex</strong> and <strong>CSIv1.tex</strong> quick references summarize more recent index formats: the <a href="https://github.com/samtools/tabix">tabix</a> tool indexes generic textual genome position-sorted files, while CSI is <a href="https://github.com/samtools/htslib">htslib</a>'s successor to the BAI index format.</p>
 
