Added PDF version of CSIv2 and VCFv4.3 drafts

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
             <li> <a href="http://samtools.github.io/hts-specs/BCFv1_qref.pdf">BCFv1</a>
             <li> <a href="http://samtools.github.io/hts-specs/BCFv2_qref.pdf">BCFv2.1</a>
             <li> <a href="http://samtools.github.io/hts-specs/CSIv1.pdf">CSIv1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/CSIv2.pdf">CSIv2 (draft)</a>
             <li> <a href="http://samtools.github.io/hts-specs/tabix.pdf">tabix</a>
             <li> <a href="http://samtools.github.io/hts-specs/VCFv4.1.pdf">VCFv4.1</a>
             <li> <a href="http://samtools.github.io/hts-specs/VCFv4.2.pdf">VCFv4.2</a>
+            <li> <a href="http://samtools.github.io/hts-specs/VCFv4.3.pdf">VCFv4.3 (draft)</a>
             </ul>
 
         <p class="view"><a href="https://github.com/samtools/hts-specs">View the Project on GitHub <small>samtools/hts-specs</small></a></p>
