Add CRAMv3.pdf and update VCFv4.2.pdf
Add CRAMv3.pdf at cbd60fe7d40fc12531dfae32bda08b64f9bed2af
Update VCFv4.2.pdf to b6abaee0bab868437df7e4b78900d9aa18a90e3d

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <ul>
             <li> <a href="http://samtools.github.io/hts-specs/SAMv1.pdf">SAMv1</a>
             <li> <a href="http://samtools.github.io/hts-specs/CRAMv2.1.pdf">CRAMv2.1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/CRAMv3.pdf">CRAMv3 (draft)</a>
             <li> <a href="http://samtools.github.io/hts-specs/BCFv1_qref.pdf">BCFv1</a>
             <li> <a href="http://samtools.github.io/hts-specs/BCFv2_qref.pdf">BCFv2.1</a>
             <li> <a href="http://samtools.github.io/hts-specs/CSIv1.pdf">CSIv1</a>
