--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li> <a href="http://samtools.github.io/hts-specs/tabix.pdf">tabix</a>
             <li> <a href="http://samtools.github.io/hts-specs/VCFv4.1.pdf">VCFv4.1</a>
             <li> <a href="http://samtools.github.io/hts-specs/VCFv4.2.pdf">VCFv4.2</a>
-            <li> <a href="http://samtools.github.io/hts-specs/VCFv4.3.pdf">VCFv4.3 (draft)</a>
+            <li> <a href="http://samtools.github.io/hts-specs/VCFv4.3.pdf">VCFv4.3</a>
             </ul>
 
         <p class="view"><a href="https://github.com/samtools/hts-specs">View the Project on GitHub <small>samtools/hts-specs</small></a></p>
