Refer to all versions at once, i.e. VCFv4.x rather than listing all

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Further details can be found at <a href="http://www.ebi.ac.uk/ena/about/cram_too
 <h2>
 <a name="variant-calling-data-files" class="anchor" href="#variant-calling-data-files"><span class="octicon octicon-link"></span></a>Variant calling data files</h2>
 
-<p><strong>VCFv4.1.tex</strong> and <strong>VCFv4.2.tex</strong> are the canonical specifications for the Variant Call Format and its textual (VCF) and binary encodings (BCF 2.x).</p>
+<p><strong>VCFv4.x.tex</strong> are the canonical specifications for the Variant Call Format and its textual (VCF) and binary encodings (BCF 2.x).</p>
 
 <p><strong>BCFv1_qref.tex</strong> summarizes the obsolete BCF1 format historically produced by <a href="https://github.com/samtools/samtools">samtools</a>.  This format is no longer recommended for use, as it has been superseded by the more widely-implemented BCF2.</p>
 
