Add SAMtags.pdf and update SAMv1.pdf to e087be007dc92f8b18ce08add9164d9d4abe5e88

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <p style="margin:0px;">View as PDF: </p>
             <ul>
             <li> <a href="http://samtools.github.io/hts-specs/SAMv1.pdf">SAMv1</a>
+            <li> <a href="http://samtools.github.io/hts-specs/SAMtags.pdf">SAMtags</a>
             <li> <a href="http://samtools.github.io/hts-specs/CRAMv2.1.pdf">CRAMv2.1</a>
             <li> <a href="http://samtools.github.io/hts-specs/CRAMv3.pdf">CRAMv3</a>
             <li> <a href="http://samtools.github.io/hts-specs/BCFv1_qref.pdf">BCFv1</a>
@@ -49,7 +50,8 @@
 <h2>
 <a name="alignment-data-files" class="anchor" href="#alignment-data-files"><span class="octicon octicon-link"></span></a>Alignment data files</h2>
 
-<p><strong>SAMv1.tex</strong> is the canonical specification for the SAM (Sequence Alignment/Map) format, BAM (its binary equivalent), and the BAI format for indexing BAM files.</p>
+<p><strong>SAMv1.tex</strong> is the canonical specification for the SAM (Sequence Alignment/Map) format, BAM (its binary equivalent), and the BAI format for indexing BAM files.
+<strong>SAMtags.tex</strong> is a companion specification describing the predefined standard optional fields and tags found in SAM, BAM, and CRAM files.</p>
 
 <p><strong>CRAMv3.tex</strong> is the canonical specification for the CRAM format, while <strong>CRAMv2.1.tex</strong> describes its now-obsolete predecessor.
 Further details can be found at <a href="http://www.ebi.ac.uk/ena/about/cram_toolkit">ENA's CRAM toolkit page</a>.</p>
