--- a/htsget_interop.html
+++ b/htsget_interop.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+View this page live at one of these locations:
+http://samtools.github.io/hts-specs/htsget_interop.html
+https://cdn.rawgit.com/samtools/hts-specs/master/htsget_interop.html
+-->
 <html lang="en">
     <head>
         <title>htsget interop</title>
