--- a/htsget_interop.html
+++ b/htsget_interop.html
@@ -7,7 +7,7 @@ https://cdn.rawgit.com/samtools/hts-specs/master/htsget_interop.html
 <html lang="en">
     <head>
         <title>htsget interop</title>
-        <link rel="stylesheet" href="https://www.ga4gh.org/assets/css/main.css" />
+        <link rel="stylesheet" href="https://www.ga4gh.org/assets/css/main-1.2.css" />
         <script src="https://unpkg.com/clipboard@1.7.1/dist/clipboard.min.js"></script>
         <script language="javascript">
         var datasets = {
