Google htsget endpoint seems to be gone, replace it with the new GA4GH one

--- a/htsget_interop.html
+++ b/htsget_interop.html
@@ -62,13 +62,9 @@ https://cdn.rawgit.com/samtools/hts-specs/master/htsget_interop.html
                 }
             },
             Google: {
-                nm: "Google",
+                nm: "GA4GH",
                 datasets: {
-                    NA12878_b37: { url: "http://35.196.212.220/reads/ga4gh-demo-public/NA12878.bam" },
-                    NA12891_b37: { url: "http://35.196.212.220/reads/ga4gh-demo-public/NA12891.bam" },
-                    NA12892_b37: { url: "http://35.196.212.220/reads/ga4gh-demo-public/NA12892.bam" },
-                    ENCFF284YOU: { url: "http://35.196.212.220/reads/ga4gh-demo-public/ENCFF284YOU.bam" },
-                    ENCFF000VWO: { url: "http://35.196.212.220/reads/ga4gh-demo-public/ENCFF000VWO.bam" }
+                    NA12878_hg38: { url: "https://htsget.ga4gh.org/reads/giab.NA12878.NIST7035.1" }
                 }
             }
         };
